force-app/main/default/objects/LLM_Config__mdt/LLM_Config__mdt.object-meta.xml
<CustomObject>
    <label>LLM Config</label>
    <pluralLabel>LLM Configs</pluralLabel>
</CustomObject>