force-app/main/default/objects/LLM_Config__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <type>Text</type>
    <length>50</length>
</CustomField>