force-app/main/default/objects/LLM_Config__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>